Рефакторинг: использовал "var". Код компилировался в JDK 10.0.1

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ include 'api'
 include 'services:webservice'
 */
 
-rootProject.name = 'ChecksumOrganizer'
+rootProject.name = 'checksum-organizer'
