Реализовал зачистку комментариев для sfv-файлов. Улучшения по коду.

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ jar {
 }
 
 task runFinalJar(type: JavaExec) {
-    System.out.println "Args:"
+    System.out.println "!!!Input Args:"
     def locArgs = System.in.newReader().readLine()
     args locArgs
     classpath = files(tasks.jar)
